--- a/CourseWorkApp/App.config
+++ b/CourseWorkApp/App.config
@@ -4,7 +4,7 @@
 		<add name="Config"
 		providerName="System.Data.SqlClient"
 		connectionString="Server = USERPC;
-        Database = CourseWorkSQL;
+        Database = CW2;
         Integrated Security=true;
         Encrypt = True;
         TrustServerCertificate = true;"/>
