--- a/CourseWorkApp/App.config
+++ b/CourseWorkApp/App.config
@@ -3,8 +3,8 @@
 	<connectionStrings>
 		<add name="Config"
 		providerName="System.Data.SqlClient"
-		connectionString="Server = USERPC;
-        Database = CW2;
+		connectionString="Server = POZERPC;
+        Database = CW;
         Integrated Security=true;
         Encrypt = True;
         TrustServerCertificate = true;"/>
